--- a/css/styleavaliacaofisica.css
+++ b/css/styleavaliacaofisica.css
@@ -56,6 +56,16 @@ body{
     font-size: 12px;
 }
 
+#ies{
+    border-radius: 30px;
+    border-width: 1px;
+    border-color: black;
+    font-size: 15px;
+    color: #fff;
+    height: 35px;
+    width: 125px;
+}
+
 #data{
     border-radius: 30px;
     border-width: 1px;
