--- a/css/styletreino.css
+++ b/css/styletreino.css
@@ -19,8 +19,8 @@ body{
 #voltar{
     border-radius: 30px;
     text-align: end;
-    margin-right: 2%;
-    margin-top: 2%;
+    margin-right: 1%;
+    margin-top: 5px;
     color: white;
 }
 
@@ -93,6 +93,8 @@ body{
     border-width: 0;
     background-color: gray;
     font-size: 12px;
+    color: white;
+    font-weight: bold;
 }
 
 
