--- a/css/stylegerenciaralunos.css
+++ b/css/stylegerenciaralunos.css
@@ -52,7 +52,7 @@ body .container{
     border-radius: 30px;
     height: 35px;
     width: 265px;
-    margin-top: 3%;
+    margin-top: 1%;
     margin-left: 5%;
     border-width: 0;
 }
@@ -72,6 +72,7 @@ body .container{
     width: 125px;
     margin-bottom: 4px;
     margin-left: 1.5%;
+    font-weight: bold;
 }
 
 body .circle{
@@ -90,17 +91,19 @@ body .circle{
     width: 400px;
     margin-left: 5%;
     font-size: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 #nome{
     border-radius: 30px;
     height: 35px;
     width: 400px;
-    margin-top: 3%;
+    margin-top: 1%;
     margin-left: 5%;
     background-color: white;
     border-width: 0;
-
+    font-weight: bold;
 }
 
 #idade{
@@ -111,6 +114,7 @@ body .circle{
     margin-left: 5%;
     background-color: white;
     border-width: 0;
+    font-weight: bold;
 }
 
 #estatura{
@@ -121,6 +125,7 @@ body .circle{
     margin-left: 1.5%;
     background-color: white;
     border-width: 0;
+    font-weight: bold;
 }
 
 #peso{
@@ -131,6 +136,7 @@ body .circle{
     margin-left: 1.5%;
     background-color: white;
     border-width: 0;
+    font-weight: bold;
 }
 
 #sexo{
@@ -141,6 +147,7 @@ body .circle{
     margin-left: 1.5%;
     background-color: white;
     border-width: 0;
+    font-weight: bold;
 }
 
 #ultimaav{
@@ -151,6 +158,7 @@ body .circle{
     margin-left: 5%;
     background-color: white;
     border-width: 0;
+    font-weight: bold;
 }
 
 #objetivo{
@@ -161,6 +169,7 @@ body .circle{
     margin-left: 5%;
     background-color: white;
     border-width: 0;
+    font-weight: bold;
 }
 
 #excluir{
